--- a/view/index.html
+++ b/view/index.html
@@ -4,11 +4,14 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
+   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="main style" charset="utf-8">
+   <script type="text/javascript" charset="utf-8" src="../lib/jquery-1.3.2.min.js"></script>
+   <script type="text/javascript" charset="utf-8" src="../src/ninja.js"></script>
 	<title>The Path to Ninja</title>
 </head>
 <body>
-   <!--
-      TODO implement all html stuff. 
-   -->
+   <div id="section-header"></div>
+   <div id="section-main"></div>
+   <div id="section-footer"></div>
 </body>
 </html>
