Codigo para apresentacao

--- a/view/application.html
+++ b/view/application.html
@@ -34,8 +34,8 @@
    </div>
    
    <div id="link_register">
-      <cite><a href="#register" title="cadastre-se" id="registerNewUser" onclick="buildRegisterView()">Cadastre-se aqui!</a></cite><br/>
-      <cite><a href="#login" title="login" class="hide" id="linkToLogin" onclick="buildLoginView()">Faça login</a></cite><br/>
+      <a href="#register" title="cadastre-se" id="registerNewUser" onclick="buildRegisterView()">Cadastre-se aqui!</a><br/>
+      <a href="#login" title="login" class="hide" id="linkToLogin" onclick="buildLoginView()">Faça login</a><br/>
    </div>
    
    <div id="register" class="hide">
