--- a/view/application.html
+++ b/view/application.html
@@ -6,65 +6,52 @@
 <head>
    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="main style" charset="utf-8">
    <script type="text/javascript" charset="utf-8" src="../lib/jquery-1.3.2.min.js"></script>
+   <script type="text/javascript" charset="utf-8" src="../src/db-gears.js"></script>
    <script type="text/javascript" charset="utf-8" src="../src/login.js"></script>
 	<title>The Path to Ninja</title>
 </head>
 <body>
-   <div id="header">
-      <h1>Banner</h1>
-   </div>
-   
+  <div id="main">
    <div id="login" class="hide">
       <form action="#" name="toLogin" method="post" id="loginForm">
          <fieldset>
-            <legend>Login</legend>
-               <ol>
-                  <li>
-                     <label>Login</label>
-                     <input type="text" name="user.login" id="username"/><error></error>
-                  </li>
-                  <li>
-                     <label>Senha</label>
-                     <input type="password" name="user.password" id="password"><error></error>
-                  </li>
-                  <input type="button" name="Enviar" value="Submit">
-               </ol>
+           <legend>Login</legend>
+           <dl>
+             <dt><label>Login</label></dt>
+             <dd><input type="text" name="user.login" id="username"/><error></error></dd>
+             <dt><label>Senha</label></dt>
+             <dd><input type="password" name="user.password" id="password"><error></error></dd>
+             <dt></dt><dd><input type="button" name="Enviar" value="Submit"></dd>
+           </dl>
          </fieldset>
       </form>
    </div>
-   
-   <div id="link_register">
-      <a href="#register" title="cadastre-se" id="registerNewUser" onclick="buildRegisterView()">Cadastre-se aqui!</a><br/>
-      <a href="#login" title="login" class="hide" id="linkToLogin" onclick="buildLoginView()">Faça login</a><br/>
-   </div>
-   
+ 
    <div id="register" class="hide">
       <form action="#login" name="registerUser" method="post" id="registerForm">
          <fieldset>
             <legend>Cadastro</legend>
-               <ol>
-                  <li>
-                     <label>Login</label>
-                     <input type="text" name="user.login" value="" id="registerUsername">   
-                  </li>
-                  <li>
-                     <label>Senha</label>
-                     <input type="password" name="user.password" value="" id="registerPassword">
-                  </li>   
-                  <li> 
-                     <label>Confirme a senha</label>  
-                     <input type="password" name="user.password.verify" value="" id="registerPasswordVerify">
-                  </li>
-                  <li>
-                     <label>E-mail</label>
-                     <input type="text" name="user.email" value="" id="registerEmail">
-                  </li>
-                  <input type="button" name="register" value="Enviar" id="registerButton">
-               </ol>
+               <dl>
+                 <dt><label>Login</label></dt>
+                 <dd><input type="text" name="user.login" value="" id="registerUsername"></dd>
+                 <dt><label>Senha</label></dt>
+                 <dd><input type="password" name="user.password" value="" id="registerPassword"></dd>
+                 <dt><label>Confirme a senha</label></dt>
+                 <dd><input type="password" name="user.password.verify" value="" id="registerPasswordVerify"></dd>
+                 <dt><label>E-mail</label></dt>
+                 <dd><input type="text" name="user.email" value="" id="registerEmail"></dd>
+                 <dd></dd><dt><input type="button" name="register" value="Enviar" id="registerButton"></dt>
+               </dl>
          </fieldset>
       </form>
    </div>
-   
-   <div id="footer"></div>
+
+   <div id="menu">
+     <ol>
+       <li><a href="#register" title="cadastre-se" id="registerNewUser" onclick="buildRegisterView()">Cadastre-se aqui!</a></li>
+       <li><a href="#login" title="login" class="hide" id="linkToLogin" onclick="buildLoginView()">Faça login</a></li>
+     </ol>
+   </div>
+ </div>
 </body>
 </html>
