--- a/view/application.html
+++ b/view/application.html
@@ -6,22 +6,24 @@
 <head>
    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="main style" charset="utf-8">
    <script type="text/javascript" charset="utf-8" src="../lib/jquery-1.3.2.min.js"></script>
+   <script type="text/javascript" charset="utf-8" src="../lib/gears_db.js"></script>
    <script type="text/javascript" charset="utf-8" src="../src/db-gears.js"></script>
-   <script type="text/javascript" charset="utf-8" src="../src/login.js"></script>
+   <script type="text/javascript" charset="utf-8" src="../src/application.js"></script>
 	<title>The Path to Ninja</title>
 </head>
 <body>
   <div id="main">
+    <div id="flash"></div>
    <div id="login" class="screen">
       <form action="#" name="toLogin" method="post" id="loginForm">
          <fieldset>
            <legend>Login</legend>
            <dl>
              <dt><label>Login</label></dt>
-             <dd><input type="text" name="user.login" class="login"/><error></error></dd>
+             <dd><input type="text" class="login"/><error></error></dd>
              <dt><label>Senha</label></dt>
-             <dd><input type="password" name="user.password" class="password"><error></error></dd>
-             <dt></dt><dd><input type="button" name="Enviar" value="Submit"></dd>
+             <dd><input type="password" class="password"><error></error></dd>
+             <dt></dt><dd><input type="submit" value="Login"></dd>
            </dl>
          </fieldset>
       </form>
@@ -33,23 +35,28 @@
             <legend>Cadastro</legend>
                <dl>
                  <dt><label>Login</label></dt>
-                 <dd><input type="text" name="user.login" value="" class="login"><error></error></dd>
+                 <dd><input type="text" class="login"><error></error></dd>
                  <dt><label>Senha</label></dt>
-                 <dd><input type="password" name="user.password" value="" class="password"><error></error></dd>
+                 <dd><input type="password" class="password needs_confirmation"><error></error></dd>
                  <dt><label>Confirme a senha</label></dt>
-                 <dd><input type="password" name="user.password.verify" value="" class="password"><error></error></dd>
+                 <dd><input type="password" class="password needs_confirmation"><error></error></dd>
                  <dt><label>E-mail</label></dt>
-                 <dd><input type="text" name="user.email" value="" class="email"><error></error></dd>
-                 <dd></dd><dt><input type="button" name="register" value="Enviar" id="registerButton"></dt>
+                 <dd><input type="text" class="email"><error></error></dd>
+                 <dd></dd><dt><input type="submit" value="Enviar"></dt>
                </dl>
          </fieldset>
       </form>
-   </div>
+    </div>
+
+    <div id="pane" class="screen">
+      <center><strong>Minhas tarefas</strong></center>
+    </div>
 
    <div id="menu">
      <ol>
-       <li><a href="#register" title="cadastre-se" id="registerLink" onclick="hideViewsAndShow('register')">Cadastre-se aqui!</a></li>
-       <li><a href="#login" title="login" class="hide" id="loginLink" onclick="hideViewsAndShow('login')">Faça login</a></li>
+       <li><a href="#register" title="cadastre-se" id="registerLink" class="section" onclick="hideViewsAndShow('register')">Cadastre-se aqui!</a></li>
+       <li><a href="#login" title="login" id="loginLink" class="section" onclick="hideViewsAndShow('login')">Faça login</a></li>
+       <li><a href="#pane" title="painel" id="paneLink" class="restricted" onclick="hideViewsAndShow('pane')">Meu painel</a></li>
      </ol>
    </div>
  </div>
