--- a/view/css/style.css
+++ b/view/css/style.css
@@ -11,6 +11,10 @@ div#main {
   margin-right: auto;
 }
 
+div#flash {
+  display: none;
+}
+
 div#menu {
   background-color: #111;
 }
@@ -57,8 +61,3 @@ form fieldset legend {
    font-weight: bold;
    font-size: 2em;
 }
-
-.hide{
-   display:none;
-}
-
